--- a/style.css
+++ b/style.css
@@ -1,65 +1,68 @@
-.teams {
-  padding: 5rem;
-
+.team {
   display: flex;
   flex-direction: column;
-  gap: 10rem;
+  gap: 12rem;
+
+  padding: 4rem;
 }
 
-.teams__info {
+.team__content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
+
+  text-align: center;
 }
 
-.teams__info--mini-title {
-  color: blue;
+.team__content--mini-title {
+  color: rgb(5, 5, 205);
 }
 
-.teams__cards {
+.team__members {
   display: flex;
   gap: 2rem;
 }
 
-.teams__cards--card {
-  background-color: rgb(6, 6, 88);
+.team__members--member {
+  background-color: #06283d;
   border-radius: 1rem;
+  padding: 4rem 2rem;
+  text-align: center;
   color: white;
-  padding: 1rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
-.teams__cards--card__image {
-  width: 12rem;
-  height: 12rem;
+.team__members--member__img {
+  height: 15rem;
+  width: 15rem;
 
-  margin-top: -5rem;
+  margin-top: -12.5rem;
 }
 
-.teams__cards--card__image img {
-  border: 4px solid white;
+.team__members--member img {
   border-radius: 50%;
+  border: 5px solid white;
 }
 
-.teams__cards--card__para {
-  text-align: center;
+.team__members--member:first-child > figure img {
+  object-position: right top;
 }
 
-.teams__cards--card__icons {
+.team__members--member__social {
   display: flex;
-  align-items: center;
   gap: 1rem;
 }
 
-.teams__cards--card__icons i {
-  background-color: rgb(43, 120, 139);
+.team__members--member__social i {
+  background-color: #08324c;
   padding: 1rem;
   border-radius: 50%;
+  height: 3.5rem;
+  width: 3.5rem;
 
   cursor: pointer;
 }
